Se anadio tabs navigation Activity Bienvenida

--- a/app/src/main/res/layout/fragment_bienvenida_fragment1.xml
+++ b/app/src/main/res/layout/fragment_bienvenida_fragment1.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/img_bienvenida_fondo"
+tools:context="com.example.educasa.Bienvenida.BienvenidaFragments.BienvenidaFragment1">
+
+<android.support.v4.view.ViewPager
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context=".Bienvenida.Bienvenida">
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <ImageView
         android:id="@+id/imageView2"
@@ -20,6 +20,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
+        android:alpha="0.5"
         android:contentDescription="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -27,33 +28,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/img_logo_white_medium" />
 
-    <Button
-        android:id="@+id/btn_iniciar_sesion"
+    <TextView
+        android:id="@+id/texto_detalle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="124dp"
-        android:text="@string/bienvenida_iniciar_sesion"
-        android:theme="@style/AppTheme.ButtonInicio"
-        app:layout_constraintBottom_toBottomOf="@+id/container"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btn_crear_cuenta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/bienvenida_crear_cuenta"
-        android:theme="@style/AppTheme.ButtonInicio"
+        android:padding="15sp"
+        android:text="@string/bienvenida_text1"
+        android:textAlignment="center"
+        android:textColor="@color/colorWhite"
+        android:textSize="20sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_iniciar_sesion" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
