--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowAnimationStyle">@null</item>
     </style>
-
+    <style name="AppTheme.ButtonInicio" parent="Base.Widget.AppCompat.Button">
+        <item name="colorButtonNormal">@color/colorWhite</item>
+        <item name="android:paddingTop">15sp</item>
+        <item name="android:paddingRight">60sp</item>
+        <item name="android:paddingBottom">15sp</item>
+        <item name="android:paddingLeft">60sp</item>
+    </style>
 </resources>
