--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="124dp"
         android:text="@string/bienvenida_iniciar_sesion"
-        android:theme="@style/AppTheme.ButtonInicio"
+        android:theme="@style/AppTheme.Bienvenida_Button"
         app:layout_constraintBottom_toBottomOf="@+id/container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -48,7 +48,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="@string/bienvenida_crear_cuenta"
-        android:theme="@style/AppTheme.ButtonInicio"
+        android:theme="@style/AppTheme.Bienvenida_Button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_iniciar_sesion" />
