--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -10,8 +10,7 @@
     <ScrollView
         android:id="@+id/scrollviewChat"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
->
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,21 +72,25 @@
                 android:layout_height="wrap_content"
                 android:padding="20sp"
                 android:text="Chat Activity..." />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20sp"
                 android:text="Chat Activity..." />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20sp"
                 android:text="Chat Activity..." />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="20sp"
                 android:text="Chat Activity..." />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -98,7 +101,6 @@
 
     <include
         android:id="@+id/include"
-        layout="@layout/menuxml"
-        />
+        layout="@layout/menuxml" />
 
 </android.support.constraint.ConstraintLayout>
