--- a/app/src/main/res/layout/activity_mis_clases.xml
+++ b/app/src/main/res/layout/activity_mis_clases.xml
@@ -6,24 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".MisClases.MisClases">
 
-    <android.support.design.widget.TextInputLayout
+    <ScrollView
+        android:id="@+id/scrollviewChat"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <android.support.design.widget.TextInputEditText
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="hint" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingBottom="60sp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mis Clases Activity..."
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="20sp"
+                android:text="MIS CLASES Actividad..." />
+
+        </LinearLayout>
+
+    </ScrollView>
 
     <include layout="@layout/menuxml"/>
 </android.support.constraint.ConstraintLayout>
