--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#004056</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorBlue">#004056</color>
 
     <color name="colorWhite">#fff</color>
     <color name="colorBlack">#000</color>
+
 
 </resources>
