--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#022938</color>
     <color name="colorPrimaryDark">#004056</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="colorPrimaryAlpha">#AEFFFFFF</color>
 
     <color name="colorBlue">#004056</color>
 
