--- a/app/src/main/res/layout/activity_solicitudes.xml
+++ b/app/src/main/res/layout/activity_solicitudes.xml
@@ -6,30 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".Solicitudes.Solicitudes">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/solicitudes_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/solicitudes_toolbar"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginBottom="55dp"
-        />
-
     <android.support.v7.widget.Toolbar
         android:id="@+id/solicitudes_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimaryAlpha"
+        android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
-        android:elevation="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <include layout="@layout/menuxml"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/solicitudes_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/include_solicitudes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/solicitudes_toolbar" />
+
+    <include
+        android:id="@+id/include_solicitudes"
+        layout="@layout/menuxml"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
