--- a/app/src/main/res/layout/fragment_bienvenida_ejm.xml
+++ b/app/src/main/res/layout/fragment_bienvenida_ejm.xml
@@ -18,14 +18,13 @@ tools:context="com.example.educasa.Bienvenida.BienvenidaFragments.BienvenidaEjm"
         android:layout_width="326dp"
         android:layout_height="183dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="224dp"
         android:alpha="0.5"
         android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/img_logo_white_medium" />
 
     <TextView
@@ -33,8 +32,10 @@ tools:context="com.example.educasa.Bienvenida.BienvenidaFragments.BienvenidaEjm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:layout_marginEnd="8dp"
-        android:padding="15sp"
+        android:paddingStart="15sp"
+        android:paddingEnd="15sp"
         android:text="@string/bienvenida_text1"
         android:textAlignment="center"
         android:textColor="@color/colorWhite"
