--- a/app/src/main/res/values/chat_styles.xml
+++ b/app/src/main/res/values/chat_styles.xml
@@ -7,4 +7,12 @@
     <style name="AppTheme.Chat_Nombre2" parent="Base.Widget.AppCompat.Button">
         <item name="colorButtonNormal">@color/colorWhite</item>
     </style>
+
+    <style name="AppTheme.Chat_ButtonSend" parent="Base.Widget.AppCompat.Button">
+        <item name="colorButtonNormal">@color/colorWhite</item>
+        <item name="android:paddingTop">15sp</item>
+        <item name="android:paddingRight">0sp</item>
+        <item name="android:paddingBottom">5sp</item>
+        <item name="android:paddingLeft">15sp</item>
+    </style>
 </resources>
