--- a/app/src/main/res/layout/activity_mis_clases.xml
+++ b/app/src/main/res/layout/activity_mis_clases.xml
@@ -6,28 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MisClases.MisClases">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/misclases_toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryAlpha"
-        android:elevation="6dp"
-        android:minHeight="?attr/actionBarSize"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/misclases_recycler"
+    <FrameLayout
+        android:id="@+id/frag_misclases_principal"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:scrollbars="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/include_misclases"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/misclases_toolbar" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/include_misclases"
+        />
 
     <include
         android:id="@+id/include_misclases"
