--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="transparent">#00FFFFFF</color>
 
     <color name="colorBlue">#004056</color>
+    <color name="colorRed">#720909</color>
 
     <color name="colorWhite">#fff</color>
     <color name="colorBlack">#000</color>
