--- a/app/src/main/res/layout/activity_mis_clases.xml
+++ b/app/src/main/res/layout/activity_mis_clases.xml
@@ -6,24 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".MisClases.MisClases">
 
-    <android.support.design.widget.TextInputLayout
+    <FrameLayout
+        android:id="@+id/frag_misclases_principal"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/include_misclases"
+        />
+
+    <include
+        android:id="@+id/include_misclases"
+        layout="@layout/menuxml"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="hint" />
-    </android.support.design.widget.TextInputLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mis Clases Activity..."
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <include layout="@layout/menuxml"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
