--- a/app/src/main/res/layout/activity_solicitudes.xml
+++ b/app/src/main/res/layout/activity_solicitudes.xml
@@ -5,14 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Solicitudes.Solicitudes">
-    <TextView
-        android:layout_width="wrap_content"
+    <FrameLayout
+        android:id="@+id/frag_solicitudes_principal"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/include_solicitudes"
+        />
+    <include
+        android:id="@+id/include_solicitudes"
+        layout="@layout/menuxml"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Solcititudesss Activity..."
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <include layout="@layout/menuxml"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
