--- a/app/src/main/res/layout/card_item_inicio_alumnos.xml
+++ b/app/src/main/res/layout/card_item_inicio_alumnos.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/inicio_cardview_alumnos"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="132dp"
-    android:padding="10dp"
-    card_view:cardElevation="6dp"
-    card_view:cardCornerRadius="6dp"
+    android:layout_width="180dp"
+    android:layout_height="180dp"
     android:layout_marginStart="6dp"
-    android:layout_marginEnd="6dp"
     android:layout_marginTop="6dp"
+    android:layout_marginEnd="6dp"
     android:layout_marginBottom="8dp"
     android:clickable="true"
     android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:orientation="vertical"
+    android:padding="10dp"
     card_view:cardBackgroundColor="@color/cardview_light_background"
-    android:foreground="?android:attr/selectableItemBackground">
+    card_view:cardCornerRadius="6dp"
+    card_view:cardElevation="6dp">
 
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="124dp">
+        android:layout_width="180dp"
+        android:layout_height="180dp">
+
         <TextView
             android:id="@+id/nombre"
             android:layout_width="146dp"
             android:layout_height="38dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="131dp"
             android:layout_marginBottom="0dp"
-            android:text="nombreee"
+            android:text="Materia"
             android:textColor="#000" />
-
 
 
     </RelativeLayout>
