--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#022938</color>
+    <color name="colorPrimary">#f9cd0b</color>
     <color name="colorPrimaryDark">#004056</color>
     <color name="colorAccent">#022938</color>
 
