cambio de iconos de inicio
Cambio de iconos del menu de inicio, se aumento dos id para ContentInicio

--- a/app/src/main/res/drawable/ic_chat_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_chat_black_24dp.xml
@@ -1,9 +1,15 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="14dp"
-    android:height="13dp"
-    android:viewportWidth="38.0"
-    android:viewportHeight="38.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M15 0v0c8.284 0 15 5.435 15 12.139s-6.716 12.139-15 12.139c-0.796 0-1.576-0.051-2.339-0.147-3.222 3.209-6.943 3.785-10.661 3.869v-0.785c2.008-0.98 3.625-2.765 3.625-4.804 0-0.285-0.022-0.564-0.063-0.837-3.392-2.225-5.562-5.625-5.562-9.434 0-6.704 6.716-12.139 15-12.139zM31.125 27.209c0 1.748 1.135 3.278 2.875 4.118v0.673c-3.223-0.072-6.181-0.566-8.973-3.316-0.661 0.083-1.337 0.126-2.027 0.126-2.983 0-5.732-0.805-7.925-2.157 4.521-0.016 8.789-1.464 12.026-4.084 1.631-1.32 2.919-2.87 3.825-4.605 0.961-1.84 1.449-3.799 1.449-5.825 0-0.326-0.014-0.651-0.039-0.974 2.268 1.873 3.664 4.426 3.664 7.24 0 3.265-1.88 6.179-4.82 8.086-0.036 0.234-0.055 0.474-0.055 0.718z" />
+<?xml version="1.0"?>
+
+    <vector android:height="110.33dp" android:width="133.02dp" android:viewportHeight="110.33" android:viewportWidth="133.02" xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <path android:fillColor="#A3A3A3" android:pathData="M11.43 85a2.83 2.83 0 0 1 -1.07 -0.21 2.78 2.78 0 0 1 -1.74 -2.56V56.62H2.81A2.79 2.79 0 0 1 0 53.85V2.77A2.79 2.79 0 0 1 2.81 0h97.74a2.79 2.79 0 0 1 2.81 2.77v52.5A2.79 2.79 0 0 1 100.55 58H39.91L13.42 84.19A2.84 2.84 0 0 1 11.43 85ZM5.62 51.08h5.81a2.79 2.79 0 0 1 2.81 2.77V75.54L36.76 53.31a2.81 2.81 0 0 1 2 -0.81h59v-47H5.62Z"/>
+
+    <path android:fillColor="#A3A3A3" android:pathData="M120.67 109.69a2.82 2.82 0 0 1 -2 -0.81L92.2 82.73H31.56A2.78 2.78 0 0 1 28.75 80V73.89a2.81 2.81 0 0 1 5.61 0v3.3h59a2.83 2.83 0 0 1 2 0.81l22.52 22.23V78.54a2.78 2.78 0 0 1 2.8 -2.77h5.82V30.24H113.57a2.78 2.78 0 1 1 0 -5.55H129.3a2.79 2.79 0 0 1 2.81 2.77V78.54a2.79 2.79 0 0 1 -2.81 2.78h-5.82v25.6a2.77 2.77 0 0 1 -1.73 2.56A2.88 2.88 0 0 1 120.67 109.69Z"/>
+
+    <path android:fillColor="#A3A3A3" android:pathData="M87.61 18.31H15.74a2.77 2.77 0 1 1 0 -5.54H87.61a2.77 2.77 0 1 1 0 5.54Z"/>
+
+    <path android:fillColor="#A3A3A3" android:pathData="M89.05 29.66H17.18a2.77 2.77 0 1 1 0 -5.54H89.05a2.77 2.77 0 1 1 0 5.54Z"/>
+
+    <path android:fillColor="#A3A3A3" android:pathData="M60.3 41H17.18a2.78 2.78 0 1 1 0 -5.55H60.3a2.78 2.78 0 1 1 0 5.55Z"/>
+
 </vector>
