--- a/app/src/main/res/drawable/ic_perfil_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_perfil_black_24dp.xml
@@ -1,9 +1,13 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="34.0"
-    android:viewportHeight="34.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M18 22.082v-1.649c2.203-1.241 4-4.337 4-7.432 0-4.971 0-9-6-9s-6 4.029-6 9c0 3.096 1.797 6.191 4 7.432v1.649c-6.784 0.555-12 3.888-12 7.918h28c0-4.030-5.216-7.364-12-7.918z" />
+<?xml version="1.0"?>
+
+    <vector android:height="108.57dp" android:width="108.57dp" android:viewportHeight="108.57" android:viewportWidth="108.57" xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <path android:fillColor="#A3A3A3" android:pathData="M54.29 108.57A54.32 54.32 0 0 1 2.39 38.32 2.8 2.8 0 1 1 7.75 40a48.7 48.7 0 1 0 10.18 -18 2.8 2.8 0 0 1 -4.19 -3.73 54.28 54.28 0 1 1 40.55 90.38Z"/>
+
+    <path android:fillColor="#A3A3A3" android:pathData="M55.87 84.45c-0.53 0 -1 0 -1.56 0C39 83.56 29.06 70.56 28.64 70a2.81 2.81 0 1 1 4.49 -3.37c0.13 0.17 8.86 11.49 21.53 12.16 8.33 0.45 16.6 -3.73 24.72 -12.39a2.81 2.81 0 0 1 4.1 3.84C74.64 79.67 65.36 84.45 55.87 84.45Z"/>
+
+    <path android:fillColor="#A3A3A3" android:pathData="M44 43.05a2.8 2.8 0 0 1 -2.81 -2.8V32.76a2.81 2.81 0 1 1 5.62 0v7.49A2.8 2.8 0 0 1 44 43.05Z"/>
+
+    <path android:fillColor="#A3A3A3" android:pathData="M68.33 44a2.81 2.81 0 0 1 -2.81 -2.81V33.69a2.81 2.81 0 0 1 5.61 0v7.49A2.8 2.8 0 0 1 68.33 44Z"/>
+
 </vector>
