--- a/app/src/main/res/drawable/ic_inicio_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_inicio_black_24dp.xml
@@ -1,9 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M10,20v-6h4v6h5v-8h3L12,3 2,12h3v8z" />
+<?xml version="1.0"?>
+
+    <vector android:height="108.18dp" android:width="124.18dp" android:viewportHeight="108.18" android:viewportWidth="124.18" xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <path android:fillColor="#A3A3A3" android:pathData="M102.37 108.47h-30a3.33 3.33 0 0 1 -3.33 -3.33V83.92H50.77v21.22a3.33 3.33 0 0 1 -3.32 3.33h-30a3.33 3.33 0 0 1 -3.33 -3.33V50.63a3.33 3.33 0 0 1 3.33 -3.33h92.05l-48.78 -39L6.24 51.57A3.33 3.33 0 1 1 2.1 46.36L58.69 1.41a3.34 3.34 0 0 1 4.15 0L121.1 48A3.33 3.33 0 0 1 119 54H20.81v47.85H44.12V80.59a3.33 3.33 0 0 1 3.33 -3.33h25a3.33 3.33 0 0 1 3.33 3.33v21.22H99.05V67.27a3.33 3.33 0 0 1 6.65 0v37.87A3.33 3.33 0 0 1 102.37 108.47Z"/>
+
 </vector>
