prueba de inicio
probando inicio con imagen

--- a/app/src/main/res/layout/card_item_inicio_alumnos.xml
+++ b/app/src/main/res/layout/card_item_inicio_alumnos.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+
     android:id="@+id/inicio_cardview_alumnos"
     android:layout_width="180dp"
     android:layout_height="180dp"
@@ -13,9 +14,9 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
     android:padding="10dp"
-    card_view:cardBackgroundColor="@color/cardview_light_background"
-    card_view:cardCornerRadius="6dp"
-    card_view:cardElevation="6dp">
+    card_view:cardBackgroundColor="@color/colorPrimaryAlpha"
+    card_view:cardCornerRadius="100dp"
+    card_view:cardElevation="0dp">
 
 
     <RelativeLayout
@@ -24,14 +25,16 @@
 
         <TextView
             android:id="@+id/nombre"
-            android:layout_width="146dp"
-            android:layout_height="38dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="131dp"
+            android:layout_marginTop="148dp"
             android:layout_marginBottom="0dp"
             android:text="Materia"
-            android:textColor="#000" />
+            android:textAlignment="center"
+            android:textColor="#454444"
+            android:textStyle="bold" />
 
 
     </RelativeLayout>
